--- a/src/CSP2.Desktop/App.xaml
+++ b/src/CSP2.Desktop/App.xaml
@@ -14,6 +14,7 @@
             <converters:StatusToColorConverter x:Key="StatusToColorConverter"/>
             <converters:StatusToTextConverter x:Key="StatusToTextConverter"/>
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+            <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
             <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter"/>
             <converters:LogLevelToColorConverter x:Key="LogLevelToColorConverter"/>
             <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
